--- a/illload/templates/faq.html
+++ b/illload/templates/faq.html
@@ -6,7 +6,20 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/main.css') }}">
-  </head>
+    <style>
+      body {
+        color: #e2e2e2;
+        font-family: sans-serif;
+      }
+
+      h3 {
+        color: #FCFCFC;
+      }
+      b {
+        color: #FF3333;
+      }
+      </style>
+</head>
   <body>
     <div align="center">
       <h1 style="margin-top: 5vh;">ill.fi</h1>
