--- a/illload/templates/home.html
+++ b/illload/templates/home.html
@@ -1,31 +1,46 @@
 <html>
-  <head>
-    <title>ill.fi</title>
-    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha256-/SIrNqv8h6QGKDuNoLGA4iret+kyesCkHGzVUUV0shc=" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles/bootstrap.css') }}">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles/main.css') }}">
-  </head>
-  <body>
-    <div align="center">
-      <h1 style="margin-top: 40vh;">ill.fi</h1>
-      <h2>
-        {% if current_user.is_authenticated %}
-          welcome <a href="profile">{{ current_user.username }}</a>
-        {% else %}
-          <a href="login" style="margin-right: 12vw;">login</a>
-          <a href="join">join</a>
-        {% endif %}
-      </h2>
-    </div>
-    <a href="docs" class="back btn btn-primary">docs</a>
-    <a style="margin-left: 12vw;" href="faq" class="back btn btn-primary">faq</a>
-    {% if current_user.is_authenticated %}
-    <a style="margin-left: 22vw;" href="logout" class="back btn btn-primary">logout</a>
-    {% endif %}
-    <div class="stats" align="center">
-        <p> files: <b>{{ files }}</b> [~<i>{{ fsize }}</i>] | users: <b>{{ users }}</b> </p>
-      </div>
-  </body>
+
+<head>
+  <title>ill.fi</title>
+  <link rel="stylesheet" href="{{ url_for('static', filename='styles/pure.css') }}">
+  <link href="https://fonts.googleapis.com/css?family=Fira+Mono" rel="stylesheet">
+  <link rel="stylesheet" href="{{ url_for('static', filename='styles/main.css') }}">
+</head>
+
+<body>
+  <p style="margin-left: 4vw; margin-top: 7vh; color: #fcfcfc;">ill.fi</p>
+
+  {% if current_user.is_authenticated %}
+  <p style="color: #FCFCFC; margin-left: 4vw; margin-top: 0px; font-size: 17px"> Welcome home, {{ current_user.username }}. </p> <a style="margin-left: 4vw;" href="profile">Profile</a>
+  <a style="margin-left: 10px;" href="logout">Log Out</a> 
+    {% else %} 
+      {% with messages = get_flashed_messages() %} 
+        {% if messages %}
+          <div class="notif">{{ messages[0] }}</div>
+          {% endif %}
+          {% endwith %}
+        
+  <form style="margin-left: 4vw;"id="login-form" class="login-form" method="POST" action="login">
+    <fieldset style="border:none; padding-left:0px; margin-left:0px;">
+      <input onkeydown="if (event.keyCode == 13) { this.form.submit(); return false; }" class="ill-input" type="email" name="email"
+        placeholder="Email">
+      <input onkeydown="if (event.keyCode == 13) { this.form.submit(); return false; }" class="ill-input" type="password" name="password"
+        placeholder="Password">
+      <a onclick='document.getElementById("login-form").submit();' style="cursor: pointer; margin-left: 20px; margin-right: 1px;">Login</a>        <a style="text-decoration: none;">or</a> <a href="join">Join</a>
+    </fieldset>
+  </form>
+  {% endif %} 
+
+
+  <div class="joinlinks">
+    <a style="padding-right: 1vw;" href="docs">Documentation</a>
+    <a style="padding-right: 1vw;" href="faq">FAQ</a> 
+  </div>
+  <div class="stats">
+    <p class="stat"> Files > <strong class="descriptor">{{ files }}</strong></p>
+    <p class="stat"> Storage Used > <strong class="descriptor"> {{ fsize }}</strong> / ∞</p>
+    <p class="stat"> Users > <strong class="descriptor">{{ users }}</strong></p>
+  </div>
+</body>
+
 </html>
